# image-editor

./: .gitignore  README.md  docker-compose.yaml
backend/: dockerfile  pyproject.toml
backend/app/api/: models.py  serializers.py  urls.py  views.py
backend/app/api/migrations/: 0001_initial.py
backend/app/app/: settings.py  urls.py
frontend/: app.css  app.js  dockerfile  index.html
frontend/assets/: canvas.js
